# device-detect

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
device_detect/: __init__.py  constants.py  core.py  error_mapping.py  exceptions.py  mapper.py  models.py  offline.py  result_builder.py  utils.py  validation.py
device_detect/cli/: __init__.py  config_loader.py  formatters.py  main.py  parallel.py
device_detect/cli/commands/: __init__.py  collect.py  detect.py  info.py  list_patterns.py  test_connection.py  version.py
device_detect/operations/: __init__.py  collect.py  detect.py  offline.py
device_detect/patterns/: __init__.py
device_detect/patterns/aruba/: __init__.py  aruba_aoscx.py  aruba_procurve.py
device_detect/patterns/cisco/: __init__.py  cisco_asa.py  cisco_ftd.py  cisco_ios.py  cisco_nxos.py  cisco_viptela.py  cisco_wlc.py  cisco_wlc_85.py  cisco_xe.py  cisco_xr.py  cisco_xr_2.py
device_detect/patterns/fortinet/: __init__.py  fortinet.py
device_detect/patterns/hp/: __init__.py  hp_comware.py  hp_procurve.py
device_detect/patterns/oneaccess/: __init__.py  oneaccess_oneos.py
device_detect/snmp/: __init__.py  client.py  collector.py  detector.py  utils.py
device_detect/ssh/: __init__.py  client.py  collector.py  commands.py  detector.py  utils.py
